--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <label for="meme-insert">Foto:</label>
       <input type="file" name="foto" id="meme-insert" />
     </header>
-    <div id="meme-image-container">
-      <img id="meme-image" />
+    <div class="tamanho" id="meme-image-container">
+      <img class="tamanho" id="meme-image"/>
       <div>
         <span id="meme-text"></span>
       </div>
