--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <label for="text-input">Texto:</label>
-      <input type="text" name="tetxo-interage" id="text-input" />
+      <input maxlength="60" type="text" name="tetxo-interage" id="text-input" />
       <br />
       <label for="meme-insert">Foto:</label>
       <input type="file" name="foto" id="meme-insert" />
