--- a/index.html
+++ b/index.html
@@ -16,10 +16,15 @@
       <input type="file" name="foto" id="meme-insert" />
     </header>
     <div class="tamanho" id="meme-image-container">
-      <img class="tamanho" id="meme-image"/>
+      <img class="tamanho" id="meme-image" />
       <div>
         <span id="meme-text"></span>
       </div>
+    </div>
+    <div>
+      <button id="fire">Fire</button>
+      <button id="water">water</button>
+      <button id="earth">Earth</button>
     </div>
     <script src="scripit.js"></script>
   </body>
