--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
       <button id="water">water</button>
       <button id="earth">Earth</button>
     </div>
+    <div>
+      <div id="meme-1">
+        <img src="imgs/meme1.png" alt="" class="memes" />
+      </div>
+      <div id="meme-2">
+        <img src="imgs/meme2.png" alt="" class="memes" />
+      </div>
+      <div id="meme-3">
+        <img src="imgs/meme3.png" alt="" class="memes" />
+      </div>
+      <div id="meme-4">
+        <img src="imgs/meme4.jpg" alt="" class="memes" />
+      </div>
+    </div>
     <script src="scripit.js"></script>
   </body>
 </html>
